[metadata]
name = yl
version = 0.0.5
url = https://github.com/t-c-w/yl
platforms = any
description_file = README.md
description = Get dictionaries from other objects
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = yl

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
